force-app/main/default/objects/B25__Filterable_Field__c/B25__Filterable_Field__c.object-meta.xml
<CustomObject>
    <description>Defines which fields are filterable on the Calendar.</description>
    <label>Filterable Field</label>
    <nameField>
        <label>Filterable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Filterable Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>