force-app/main/default/objects/B25__Filterable_Field__c/fields/B25__Calendar__c.field-meta.xml
<CustomField>
    <fullName>B25__Calendar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>On which Calendar should this Filterable Field show?</description>
    <inlineHelpText>Sur quel calendrier ce champ filtrable doit-il apparaître ?</inlineHelpText>
    <label>Calendar</label>
    <referenceTo>B25__Calendar__c</referenceTo>
    <relationshipLabel>Filterable Fields</relationshipLabel>
    <relationshipName>Filterable_Fields</relationshipName>
    <type>Lookup</type>
</CustomField>