force-app/main/default/objects/B25__Filterable_Field__c/fields/B25__Default_Checkbox_Value__c.field-meta.xml
<CustomField>
    <fullName>B25__Default_Checkbox_Value__c</fullName>
    <description>Sets the default checkbox values for the Filterable Field record.</description>
    <inlineHelpText>Définit les valeurs par défaut des cases à cocher pour l’enregistrement du champ filtrable.</inlineHelpText>
    <label>Default Checkbox Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Checked</fullName>
            </value>
            <value>
                <fullName>Unchecked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>