force-app/main/default/objects/B25__Filterable_Field__c/fields/B25__Hide_from_Calendar__c.field-meta.xml
<CustomField>
    <fullName>B25__Hide_from_Calendar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For checkbox filters, checking this will hide the filter from the Calendar, and always apply the default checkbox value to the Calendar.</description>
    <inlineHelpText>Pour les filtres de case à cocher, le fait de cocher cette option masquera le filtre du calendrier, et appliquera toujours la valeur par défaut de la case à cocher au calendrier.</inlineHelpText>
    <label>Hide from Calendar</label>
    <type>Checkbox</type>
</CustomField>