force-app/main/default/objects/B25__Filterable_Field__c/fields/B25__Relationship_Name__c.field-meta.xml
<CustomField>
    <fullName>B25__Relationship_Name__c</fullName>
    <description>The relationship name between the SObject (referenced through the Dependent_Filter__c field) and this Filterable Field&apos;s SObject</description>
    <inlineHelpText>Le nom de la relation entre le SObjet (référencé par le champ Dependent_Filter__c) et le SObjet de ce champ filtrable</inlineHelpText>
    <label>Relationship Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>