force-app/main/default/objects/B25__Filterable_Field__c/fields/B25__Show_all_results__c.field-meta.xml
<CustomField>
    <fullName>B25__Show_all_results__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For lookups, checking this box will display all the possible options in the suggestion list.</description>
    <inlineHelpText>Pour les recherches, en cochant cette case, toutes les options possibles seront affichées dans la liste de suggestions.</inlineHelpText>
    <label>Show all results</label>
    <type>Checkbox</type>
</CustomField>